# sudoku-llm-benchmark

./: .gitignore  CLAUDE.md  README.md  TLDR.md  TODO.md  config.example.yaml  plan_v2.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
configs/: example.yaml  full_sanity_check.yaml  gemma4_26b.yaml  qwen36_27b.yaml  sanity_check.yaml  simple_sanity_check.yaml  trivial_smoke_test.yaml
docs/superpowers/plans/: 2026-03-28-sudoku-benchmark.md  2026-03-29-llamacpp-backend.md
docs/superpowers/specs/: 2026-03-29-llamacpp-backend-design.md  2026-03-30-token-breakdown-design.md
puzzles/: puzzles.json  trivial_puzzles.json
results/: COLUMNS.md
src/backends/llamacpp/: monitor.py
src/backends/vllm/: monitor.py
src/sudoku_bench/: board.py  config.py  feedback.py  formatter.py  gpu_monitor.py  metrics.py  model_info.py  parser.py  puzzle_bank.py  runner.py  server.py  validator.py
tests/: test_board.py  test_config.py  test_feedback.py  test_formatter.py  test_gpu_monitor.py  test_metrics.py  test_model_info.py  test_parser.py  test_puzzle_bank.py  test_runner.py  test_server.py  test_validator.py
tests/backends/: test_llamacpp_monitor.py  test_vllm_monitor.py
