[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku-bench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "py-sudoku>=1.0.3",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "vllm==0.18.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.4"]

[project.scripts]
sudoku-bench = "sudoku_bench.runner:main"
sudoku-gen = "sudoku_bench.puzzle_bank:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sudoku_bench", "src/backends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
